5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1573_1331.log
== SUBMITION (2019-03-13 14:21:53) 
-- CODE:
50//3
-- EXECUTION TIME:
0.249624
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:22:24) 
-- CODE:
50//3
-- EXECUTION TIME:
0.223796
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:22:25) 
-- CODE:
50//3
-- EXECUTION TIME:
0.265507
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:22:25) 
-- CODE:
50//3
-- EXECUTION TIME:
0.135979
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:22:25) 
-- CODE:
50//3
-- EXECUTION TIME:
0.11011
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:22:25) 
-- CODE:
50//3
-- EXECUTION TIME:
0.100299
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:22:25) 
-- CODE:
50//3
-- EXECUTION TIME:
0.160395
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:29:59) 
-- CODE:
50//3
50%3
-- EXECUTION TIME:
0.194024
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:30:00) 
-- CODE:
50//3
50%3
-- EXECUTION TIME:
0.170375
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:30:00) 
-- CODE:
50//3
50%3
-- EXECUTION TIME:
0.115266
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:30:01) 
-- CODE:
50//3
50%3
-- EXECUTION TIME:
0.165492
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:30:01) 
-- CODE:
50//3
50%3
-- EXECUTION TIME:
0.113004
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:30:01) 
-- CODE:
50//3
50%3
-- EXECUTION TIME:
0.129762
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:32:58) 
-- CODE:
valor=50//3
-- EXECUTION TIME:
0.148435
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:34:18) 
-- CODE:
valor=50//3

-- EXECUTION TIME:
0.132186
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:27:45) 
-- CODE:

3z\z96   60022

print(50%3)
-- ERROR:
File "XXXX", line 2
    3z\z96   60022
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:45:10) 
-- CODE:
valor=50/3
print(round( valor,2))
-- OUTPUT:
16.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:46:33) 
-- CODE:
valor=50//3
print(round( valor,2))

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:49:02) 
-- CODE:
valor=50//3


-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:49:06) 
-- CODE:
valor=50//3


-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:11:29) 
-- CODE:
valor=50//3
print(round( valor, 2))

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:11:44) 
-- CODE:
valor=50//3
print(round( valor, 2))

-- EXECUTION TIME:
0.193363
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:11:47) 
-- CODE:
valor=50//3
print(round( valor, 2))

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:22:06) 
-- CODE:
valor=50//3%1
print(round( valor, 2))

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:22:11) 
-- CODE:
valor=50//3%1
print(round( valor, 2))

-- EXECUTION TIME:
0.199696
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:22:56) 
-- CODE:
valor=50//3
print(round( valor ))

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:23:15) 
-- CODE:
valor=503
print(round( valor ))

-- EXECUTION TIME:
0.186162
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
503
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:23:19) 
-- CODE:
valor=503
print(round( valor ))

-- EXECUTION TIME:
0.15258
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
503
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:23:57) 
-- CODE:
valor=50//3
print(round( valor ))

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:24:00) 
-- CODE:
valor=50//3
print(round( valor ))

-- EXECUTION TIME:
0.280395
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:24:02) 
-- CODE:
valor=50//3
print(round( valor ))

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:25:04) 
-- CODE:
valor=50//3
print(round( valor,16%5 ))

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:25:07) 
-- CODE:
valor=50//3
print(round( valor,16%5 ))

-- EXECUTION TIME:
0.144424
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:25:09) 
-- CODE:
valor=50//3
print(round( valor,16%5 ))

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:25:17) 
-- CODE:
valor=50//3
print(round( valor ))

-- EXECUTION TIME:
0.157062
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:30:13) 
-- CODE:
valor=50/3
print(round( valor ))

-- OUTPUT:
17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:30:17) 
-- CODE:
valor=50/3
print(round( valor ))

-- EXECUTION TIME:
0.180322
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:36:49) 
-- CODE:
valor=5%3
print( valor )

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:37:27) 
-- CODE:
valor=5%3
print( valor,2 )
-- OUTPUT:
2 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:39:53) 
-- CODE:
valor=50%3
print( valor,2 )
-- OUTPUT:
2 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:39:57) 
-- CODE:
valor=50%3
print( valor,2 )
-- EXECUTION TIME:
0.21109
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:40:01) 
-- CODE:
valor=50%3
print( valor,2 )
-- OUTPUT:
2 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:40:19) 
-- CODE:
valor=50%3
print( valor,2 )
-- EXECUTION TIME:
0.195732
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:40:21) 
-- CODE:
valor=50%3
print( valor,2 )
-- OUTPUT:
2 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:40:39) 
-- CODE:
valor=50%3
print( valor,2 )
-- EXECUTION TIME:
0.186381
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:40:42) 
-- CODE:
valor=50%3
print( valor,2 )
-- OUTPUT:
2 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:43:38) 
-- CODE:
valor=50%3
print( valor,2 )
-- EXECUTION TIME:
0.203921
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:44:15) 
-- CODE:
valor=50%3
print( valor,2 )
-- OUTPUT:
2 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:44:20) 
-- CODE:
valor=50%3
print( valor,2 )
-- EXECUTION TIME:
0.168886
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:44:42) 
-- CODE:
valor=50%3
print( valor,2 )
-- EXECUTION TIME:
0.160767
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:52:47) 
-- CODE:
print(50//3)
-- EXECUTION TIME:
0.126809
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:52:48) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:52:49) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:53:11) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:53:16) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.201906
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
